Fix verse continuation alignment on Kindle

--- a/site/style.css
+++ b/site/style.css
@@ -241,17 +241,8 @@ em,
 }
 
 .verse-continuation {
-  display: table;
-  width: 100%;
-  table-layout: fixed;
-  margin: 0 0 0.2em 0;
-}
-
-.verse-continuation::before {
-  display: table-cell;
-  width: 1.8em;
-  padding-right: 0.25em;
-  content: "";
+  display: block;
+  margin: 0 0 0.2em 1.8em;
 }
 
 .error {
